--- a/src/pages/categories.html
+++ b/src/pages/categories.html
@@ -145,7 +145,7 @@
           id="categoryForm"
           class="flex flex-col flex-1 gap-6 overflow-auto"
         >
-          <input type="hidden" id="includeId" name="id" />
+          <input type="hidden" id="categoryId" name="id" />
 
           <div id="languageFields" class="flex flex-col gap-4"></div>
 
