solve activity error

--- a/src/pages/activities.html
+++ b/src/pages/activities.html
@@ -328,7 +328,7 @@
           languageFieldsContainer.innerHTML = "";
 
           availableLanguages.forEach((lang) => {
-            const existingTranslation = category.name.find(
+            const existingTranslation = activity.name.find(
               (n) => n.languageId === lang.id
             );
 
