--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -202,8 +202,7 @@
           day: "2-digit",
           hour: "2-digit",
           minute: "2-digit",
-          second: "2-digit",
-          hour12: false,
+          hour12: true,
         }).format(d);
       }
 
