--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -56,7 +56,7 @@
             <i data-lucide="activity"></i> <span>Activities</span>
           </a>
           <a
-            href="#"
+            href="booking.html"
             class="flex items-center gap-3 px-4 py-2 rounded-lg text-gray-700 hover:bg-blue-100"
           >
             <i data-lucide="calendar-check"></i> <span>Bookings</span>
