--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -191,6 +191,13 @@
           maximumFractionDigits: 2,
         });
       }
+      function parseISOGuessTZ(iso) {
+        if (!iso) return null;
+        const hasTZ = /[zZ]|[+\-]\d{2}:\d{2}$/.test(iso);
+        const fixed = hasTZ ? iso : iso + "Z";
+        const d = new Date(fixed);
+        return isNaN(d) ? null : d;
+      }
       function formatDateLocal(iso) {
         const d = parseISOGuessTZ(iso);
         if (!d) return "-";
