--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -187,7 +187,7 @@
               </button>
               <button
                 id="tabImages"
-                class="tab-btn rounded-full px-4 py-2 text-sm font-medium text-white/80 hover:text-white"
+                class="tab-btn rounded-full px-4 py-2 text-sm font-medium hover:text-white"
                 aria-selected="false"
               >
                 Images
@@ -251,7 +251,7 @@
                   name="Duration"
                   required
                   class="w-full rounded-xl border border-gray-200 bg-white px-4 py-2.5 shadow-sm focus:border-blue-500 focus:ring-4 focus:ring-blue-500/10 outline-none transition"
-                  placeholder="Hours"
+                  placeholder="Minutes"
                 />
               </div>
 
