--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
     <link
       rel="stylesheet"
@@ -12,25 +13,6 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
     <title>Tour Guide Admin Panel</title>
-
-    <!-- Small visual polish for scrollbars inside the modal -->
-    <style>
-      .custom-scroll {
-        scrollbar-width: thin;
-        scrollbar-color: #c7c9d1 transparent;
-      }
-      .custom-scroll::-webkit-scrollbar {
-        height: 8px;
-        width: 8px;
-      }
-      .custom-scroll::-webkit-scrollbar-thumb {
-        background: #c7c9d1;
-        border-radius: 8px;
-      }
-      .custom-scroll::-webkit-scrollbar-track {
-        background: transparent;
-      }
-    </style>
   </head>
   <body class="bg-gray-50 text-gray-800 font-sans">
     <div class="flex min-h-screen">
@@ -105,23 +87,95 @@
         </div>
 
         <!-- Trip Table -->
-        <div class="bg-white rounded-xl shadow overflow-x-auto">
-          <table class="min-w-full text-sm text-left">
-            <thead class="bg-gray-100 text-gray-600 uppercase text-xs">
-              <tr>
-                <th class="px-6 py-4">Name</th>
-                <th class="px-6 py-4">Category</th>
-                <th class="px-6 py-4">Price</th>
-                <th class="px-6 py-4">Duration</th>
-                <th class="px-6 py-4">Available</th>
-                <th class="px-6 py-4">Actions</th>
-              </tr>
-            </thead>
-            <tbody
-              id="tripTable"
-              class="divide-y divide-gray-200 bg-white"
-            ></tbody>
-          </table>
+        <!-- Enhanced Table Card -->
+        <div
+          class="bg-white rounded-2xl shadow ring-1 ring-gray-200 overflow-hidden"
+        >
+          <!-- subtle header bar (optional) -->
+          <div
+            class="flex items-center justify-between px-4 py-3 bg-gray-50 border-b"
+          >
+            <div class="text-sm text-gray-600">Trips</div>
+            <!-- room for future filters/actions -->
+          </div>
+
+          <div class="overflow-x-auto">
+            <table class="min-w-full text-sm">
+              <thead
+                class="sticky top-0 z-10 bg-gray-50/95 backdrop-blur supports-[backdrop-filter]:bg-gray-50/75 text-gray-600 text-xs uppercase"
+              >
+                <tr>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    <button
+                      class="flex items-center gap-1 group"
+                      data-sort="name"
+                    >
+                      <span>Name</span>
+                      <span
+                        class="ml-1 text-[10px] px-1 rounded bg-gray-200/70 text-gray-600 sort-badge hidden"
+                        >▲</span
+                      >
+                    </button>
+                  </th>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    <button
+                      class="flex items-center gap-1 group"
+                      data-sort="category"
+                    >
+                      <span>Category</span>
+                      <span
+                        class="ml-1 text-[10px] px-1 rounded bg-gray-200/70 text-gray-600 sort-badge hidden"
+                        >▲</span
+                      >
+                    </button>
+                  </th>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    <button
+                      class="flex items-center gap-1 group"
+                      data-sort="price"
+                    >
+                      <span>Price</span>
+                      <span
+                        class="ml-1 text-[10px] px-1 rounded bg-gray-200/70 text-gray-600 sort-badge hidden"
+                        >▲</span
+                      >
+                    </button>
+                  </th>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    <button
+                      class="flex items-center gap-1 group"
+                      data-sort="duration"
+                    >
+                      <span>Duration</span>
+                      <span
+                        class="ml-1 text-[10px] px-1 rounded bg-gray-200/70 text-gray-600 sort-badge hidden"
+                        >▲</span
+                      >
+                    </button>
+                  </th>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    <button
+                      class="flex items-center gap-1 group"
+                      data-sort="available"
+                    >
+                      <span>Available</span>
+                      <span
+                        class="ml-1 text-[10px] px-1 rounded bg-gray-200/70 text-gray-600 sort-badge hidden"
+                        >▲</span
+                      >
+                    </button>
+                  </th>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    Actions
+                  </th>
+                </tr>
+              </thead>
+              <tbody
+                id="tripTable"
+                class="divide-y divide-gray-100 bg-white"
+              ></tbody>
+            </table>
+          </div>
         </div>
 
         <div
@@ -187,7 +241,7 @@
               </button>
               <button
                 id="tabImages"
-                class="tab-btn rounded-full px-4 py-2 text-sm font-medium hover:text-white"
+                class="tab-btn rounded-full px-4 py-2 text-sm font-medium"
                 aria-selected="false"
               >
                 Images
@@ -404,6 +458,64 @@
       let modalMode = "add"; // 'add' | 'edit'
       let editTripId = null; // used for update
       let lastFocusedEl = null; // for modal a11y
+      let sortState = { key: null, dir: "asc" }; // keys: name|category|price|duration|available
+      let lastTripsPage = [];
+
+      // --- NEW: helpers for pretty cells ---
+      function badge(text, color = "blue") {
+        const cls =
+          {
+            blue: "bg-blue-50 text-blue-700 ring-blue-100",
+            gray: "bg-gray-50 text-gray-700 ring-gray-100",
+            green: "bg-green-50 text-green-700 ring-green-100",
+            red: "bg-red-50 text-red-700 ring-red-100",
+            amber: "bg-amber-50 text-amber-700 ring-amber-100",
+            violet: "bg-violet-50 text-violet-700 ring-violet-100",
+          }[color] || "bg-gray-50 text-gray-700 ring-gray-100";
+        return `<span class="inline-flex items-center rounded-full px-2 py-0.5 text-xs font-medium ring-1 ${cls}">${text}</span>`;
+      }
+      function availabilityBadge(val) {
+        return val
+          ? `<span class="inline-flex items-center gap-1 rounded-full px-2 py-0.5 text-xs font-medium ring-1 bg-emerald-50 text-emerald-700 ring-emerald-100">
+           <i data-lucide="check-circle-2" class="h-3.5 w-3.5"></i> Yes
+         </span>`
+          : `<span class="inline-flex items-center gap-1 rounded-full px-2 py-0.5 text-xs font-medium ring-1 bg-rose-50 text-rose-700 ring-rose-100">
+           <i data-lucide="x-circle" class="h-3.5 w-3.5"></i> No
+         </span>`;
+      }
+      function formatPrice(n) {
+        const num = Number(n ?? 0);
+        return `<span class="tabular-nums font-semibold">$${num.toFixed(
+          2
+        )}</span>`;
+      }
+      function durationPill(hours) {
+        return `<span class="inline-flex items-center gap-1 rounded-lg px-2 py-1 text-xs font-medium ring-1 ring-gray-200 bg-gray-50 text-gray-700">
+              <i data-lucide="clock-3" class="h-3.5 w-3.5"></i>${hours}h
+            </span>`;
+      }
+      function initialBubble(name) {
+        const ch = (name || "?").trim().charAt(0).toUpperCase() || "?";
+        return `<span class="inline-flex h-8 w-8 items-center justify-center rounded-lg bg-indigo-600/10 text-indigo-700 font-semibold ring-1 ring-indigo-200">${ch}</span>`;
+      }
+
+      // --- NEW: skeleton while loading ---
+      function showTableSkeleton(rows = 8) {
+        const tbody = document.getElementById("tripTable");
+        let html = "";
+        for (let i = 0; i < rows; i++) {
+          html += `
+        <tr class="hover:bg-gray-50/70">
+          <td class="px-6 py-4"><div class="h-4 w-40 rounded tg-shimmer"></div></td>
+          <td class="px-6 py-4"><div class="h-4 w-24 rounded tg-shimmer"></div></td>
+          <td class="px-6 py-4"><div class="h-4 w-16 rounded tg-shimmer"></div></td>
+          <td class="px-6 py-4"><div class="h-4 w-12 rounded tg-shimmer"></div></td>
+          <td class="px-6 py-4"><div class="h-5 w-20 rounded-full tg-shimmer"></div></td>
+          <td class="px-6 py-4"><div class="h-8 w-24 rounded-lg tg-shimmer"></div></td>
+        </tr>`;
+        }
+        tbody.innerHTML = html;
+      }
 
       // --- Choices helpers (MUST be defined before first use) ---
       function getChoicesInstance(el, opts = { removeItemButton: true }) {
@@ -490,86 +602,219 @@
       });
 
       // === Fetch Trips ===
-      async function fetchTrips(page = 1) {
+      const _origFetchTrips = fetchTrips;
+      fetchTrips = async function (page = 1) {
+        showTableSkeleton(); // show skeleton
         const token = localStorage.getItem("accessToken");
-        const response = await fetch(
-          `${baseUrl}?pageNumber=${page}&pageSize=${pageSize}`,
-          {
-            method: "GET",
-            headers: { Authorization: `Bearer ${token}` },
+        try {
+          const response = await fetch(
+            `${baseUrl}?pageNumber=${page}&pageSize=${pageSize}`,
+            {
+              method: "GET",
+              headers: { Authorization: `Bearer ${token}` },
+            }
+          );
+          const result = await response.json();
+          if (result.succeeded) {
+            renderTrips(result.data.data);
+            renderPagination(result.data.pageNumber, result.data.count);
+          } else {
+            document.getElementById("tripTable").innerHTML =
+              '<tr><td colspan="6" class="text-center text-red-500 py-6">Failed to load trips</td></tr>';
           }
-        );
-        const result = await response.json();
-        if (result.succeeded) {
-          renderTrips(result.data.data);
-          renderPagination(result.data.pageNumber, result.data.count);
-        } else {
-          tripTable.innerHTML =
-            '<tr><td colspan="7" class="text-center text-red-500 py-4">Failed to load trips</td></tr>';
+        } catch (e) {
+          document.getElementById("tripTable").innerHTML =
+            '<tr><td colspan="6" class="text-center text-red-500 py-6">Network error</td></tr>';
+          console.error(e);
         }
-      }
+      };
 
       // === Render Trips ===
       function renderTrips(trips) {
-        tripTable.innerHTML = "";
-        if (!trips || trips.length === 0) {
-          tripTable.innerHTML =
-            '<tr><td colspan="7" class="text-center py-4">No trips found</td></tr>';
+        // cache the last page to enable local sorting
+        lastTripsPage = Array.isArray(trips) ? [...trips] : [];
+
+        // apply sort if active
+        const toRender = applySort(lastTripsPage);
+
+        const tbody = document.getElementById("tripTable");
+        tbody.innerHTML = "";
+
+        if (!toRender || toRender.length === 0) {
+          tbody.innerHTML = `
+        <tr>
+          <td colspan="6" class="px-6 py-12">
+            <div class="flex items-center justify-center gap-3 text-gray-600">
+              <i data-lucide="map" class="h-5 w-5"></i>
+              <span>No trips found</span>
+              <button class="ml-3 inline-flex items-center gap-2 rounded-lg bg-blue-600 px-3 py-1.5 text-white text-xs font-semibold hover:bg-blue-700"
+                      onclick="openAddTripModal()">
+                <i data-lucide="plus" class="h-4 w-4"></i> Add Trip
+              </button>
+            </div>
+          </td>
+        </tr>`;
+          if (window.lucide?.createIcons) lucide.createIcons();
           return;
         }
-        trips.forEach((trip) => {
+
+        toRender.forEach((trip) => {
           const row = document.createElement("tr");
+          row.className = "hover:bg-gray-50 transition-colors";
           row.innerHTML = `
-            <td class="px-6 py-3">${trip.name}</td>
-            <td class="px-6 py-3">${trip.category}</td>
-            <td class="px-6 py-3">$${Number(trip.price).toFixed(2)}</td>
-            <td class="px-6 py-3">${trip.duration}</td>
-            <td class="px-6 py-3">${trip.isAvailable ? "Yes" : "No"}</td>
-            <td class="px-6 py-3 flex items-center gap-2">
-              <button class="text-blue-400 hover:text-blue-900" title="Edit" onclick="openEditTripModal(${
-                trip.id
-              })">
-                <i data-lucide="pencil"></i>
-              </button>
-              <button class="text-red-400 hover:text-red-900" title="Delete" onclick="handleDeleteTrip(${
-                trip.id
-              })">
-                <i data-lucide="trash-2"></i>
-              </button>
-            </td>`;
-          tripTable.appendChild(row);
+        <!-- Name -->
+        <td class="px-6 py-4">
+          <div class="flex items-center gap-3">
+            ${initialBubble(trip.name)}
+            <div>
+              <div class="font-medium text-gray-900">${trip.name}</div>
+              <div class="text-xs text-gray-500">#${trip.id}</div>
+            </div>
+          </div>
+        </td>
+
+        <!-- Category -->
+        <td class="px-6 py-4">
+          ${badge(trip.category || "Uncategorized", "violet")}
+        </td>
+
+        <!-- Price -->
+        <td class="px-6 py-4">
+          ${formatPrice(trip.price)}
+        </td>
+
+        <!-- Duration -->
+        <td class="px-6 py-4">
+          ${durationPill(trip.duration)}
+        </td>
+
+        <!-- Available -->
+        <td class="px-6 py-4">
+          ${availabilityBadge(!!trip.isAvailable)}
+        </td>
+
+        <!-- Actions -->
+        <td class="px-6 py-4">
+          <div class="inline-flex overflow-hidden rounded-lg ring-1 ring-gray-200 bg-white shadow-sm">
+            <button class="px-2.5 py-2 text-blue-600 hover:bg-blue-50" title="Edit" onclick="openEditTripModal(${
+              trip.id
+            })">
+              <i data-lucide="pencil" class="h-4 w-4"></i>
+            </button>
+            <div class="w-px bg-gray-200"></div>
+            <button class="px-2.5 py-2 text-rose-600 hover:bg-rose-50" title="Delete" onclick="handleDeleteTrip(${
+              trip.id
+            })">
+              <i data-lucide="trash-2" class="h-4 w-4"></i>
+            </button>
+          </div>
+        </td>
+      `;
+          tbody.appendChild(row);
         });
         if (window.lucide?.createIcons) lucide.createIcons();
       }
-
       // === Pagination ===
       function renderPagination(current, totalCount) {
-        const paginationContainer = document.getElementById("pagination");
+        const container = document.getElementById("pagination");
         const totalPages = Math.ceil(totalCount / pageSize);
-        paginationContainer.innerHTML = "";
+        container.innerHTML = "";
+
+        const group = document.createElement("div");
+        group.className =
+          "inline-flex overflow-hidden rounded-xl ring-1 ring-gray-200 bg-white shadow-sm";
+
         const prevBtn = document.createElement("button");
         prevBtn.textContent = "Previous";
         prevBtn.disabled = current === 1;
-        prevBtn.className = "px-4 py-2 bg-gray-200 rounded disabled:opacity-50";
+        prevBtn.className = "px-4 py-2 disabled:opacity-50 hover:bg-gray-50";
         prevBtn.onclick = () => {
           if (current > 1) {
             currentPage--;
             fetchTrips(currentPage);
           }
         };
+
+        const info = document.createElement("span");
+        info.className = "px-4 py-2 text-gray-600 border-x border-gray-200";
+        info.textContent = `Page ${current} of ${totalPages}`;
+
         const nextBtn = document.createElement("button");
         nextBtn.textContent = "Next";
         nextBtn.disabled = current === totalPages;
-        nextBtn.className = "px-4 py-2 bg-gray-200 rounded disabled:opacity-50";
+        nextBtn.className = "px-4 py-2 disabled:opacity-50 hover:bg-gray-50";
         nextBtn.onclick = () => {
           if (current < totalPages) {
             currentPage++;
             fetchTrips(currentPage);
           }
         };
-        paginationContainer.appendChild(prevBtn);
-        paginationContainer.append(` Page ${current} of ${totalPages} `);
-        paginationContainer.appendChild(nextBtn);
+
+        group.appendChild(prevBtn);
+        group.appendChild(info);
+        group.appendChild(nextBtn);
+        container.appendChild(group);
+      }
+
+      function applySort(list) {
+        if (!Array.isArray(list)) return [];
+        if (!sortState.key) return list;
+        const dir = sortState.dir === "desc" ? -1 : 1;
+        const key = sortState.key;
+        return [...list].sort((a, b) => {
+          let va = a[key];
+          let vb = b[key];
+          if (key === "available") {
+            va = !!a.isAvailable;
+            vb = !!b.isAvailable;
+          }
+          if (key === "price" || key === "duration") {
+            va = Number(va);
+            vb = Number(vb);
+          }
+          va = (va ?? "").toString().toLowerCase();
+          vb = (vb ?? "").toString().toLowerCase();
+          if (va < vb) return -1 * dir;
+          if (va > vb) return 1 * dir;
+          return 0;
+        });
+      }
+
+      function setupTableSort() {
+        const thButtons = document.querySelectorAll("thead [data-sort]");
+        thButtons.forEach((btn) => {
+          btn.addEventListener("click", () => {
+            const keyMap = {
+              name: "name",
+              category: "category",
+              price: "price",
+              duration: "duration",
+              available: "available",
+            };
+            const key = keyMap[btn.dataset.sort];
+            if (!key) return;
+            if (sortState.key === key) {
+              sortState.dir = sortState.dir === "asc" ? "desc" : "asc";
+            } else {
+              sortState.key = key;
+              sortState.dir = "asc";
+            }
+            updateSortBadges();
+            // re-render current page with sort
+            renderTrips(lastTripsPage);
+          });
+        });
+      }
+
+      function updateSortBadges() {
+        const thButtons = document.querySelectorAll("thead [data-sort]");
+        thButtons.forEach((btn) => {
+          const badge = btn.querySelector(".sort-badge");
+          if (!badge) return;
+          const isActive = sortState.key === btn.dataset.sort;
+          badge.classList.toggle("hidden", !isActive);
+          if (isActive) badge.textContent = sortState.dir === "asc" ? "▲" : "▼";
+        });
       }
 
       // === Fetch & Populate Selects ===
@@ -1227,6 +1472,7 @@
         refreshNotIncludesOptions();
 
         setupEventListeners();
+        setupTableSort();
         fetchTrips();
       })();
 
