--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -428,14 +428,14 @@
               enctype="multipart/form-data"
               class="space-y-4"
             >
-              <label class="block font-medium">Upload Trip Images</label>
+              <label class="block font-medium mt-3">Upload Trip Images</label>
               <input
                 type="file"
                 id="tripImages"
                 name="images"
                 multiple
                 accept="image/*"
-                class="w-full rounded-xl border border-gray-200 bg-white px-4 py-2.5 shadow-sm focus:border-blue-500 focus:ring-4 focus:ring-blue-500/10 outline-none transition"
+                class="w-full rounded-xl border border-gray-200 bg-white px-4 py-2 shadow-sm focus:border-blue-500 focus:ring-4 focus:ring-blue-500/10 outline-none transition"
               />
 
               <p class="text-sm text-gray-500">
